--- a/translations/recommendations.tex/fr.po
+++ b/translations/recommendations.tex/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-28 21:31+0200\n"
+"POT-Creation-Date: 2024-07-31 16:13+0200\n"
 "PO-Revision-Date: 2024-07-28 15:06+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -250,10 +250,10 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
-"  \\item When deciding which building to construct in your town, especially in the early game, it is \\textit{usually} best to prioritize units over the city hall, mage guild, or other faction-specific buildings.\n"
-"  \\item If you're unsure which spell, artifact, or ability to choose, prioritize those that help you cycle through your deck.\n"
+"  \\item When deciding which building to construct in your town, especially in the early game, it is \\textit{usually} best to prioritize Units over the City Hall, Citadel, Mage Guild, or other faction-specific buildings.\n"
+"  \\item If you're unsure which Spell, Artifact, or Ability to choose, prioritize those that help you cycle through your deck.\n"
 "    This includes any cards that allow you to draw cards or retrieve cards from your discard pile.\n"
-"  \\item Try to avoid using your main Hero's movement points for actions that your Secondary Hero can handle, such as flipping the Map tiles, visiting Water Wheels, and so on.\n"
+"  \\item Try to avoid using your Main Hero's movement points for actions that your Secondary Hero can handle, such as flipping the Map tiles, visiting Water Wheels, and so on.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
