Fix path to map assets

--- a/clash/dragoncurse_castle.tex
+++ b/clash/dragoncurse_castle.tex
@@ -94,6 +94,6 @@ During this scenario:
 
 \begin{tikzpicture}[overlay]
   \centering
-  \node at (8.5, -4) {\includegraphics[width=0.7\paperwidth]{\_assets/maps/dragoncurse-castle.png}};
+  \node at (8.5, -4) {\includegraphics[width=0.7\paperwidth]{\maps/dragoncurse-castle.png}};
 \end{tikzpicture}
 
