--- a/coops/emerald_island.tex
+++ b/coops/emerald_island.tex
@@ -87,16 +87,16 @@ There are unflagged Mines or Settlements left in map at the end of Round 8.
 \vspace{2em}
 
 \begin{center}
-  \includegraphics[width=0.2\paperwidth]{\_assets/maps/emerald-1.png}
+  \includegraphics[width=0.2\paperwidth]{\maps/emerald-1.png}
   \captionof{figure}{1-PLAYER SCENARIO}
   \vspace{3em}
-  \includegraphics[width=0.3\paperwidth]{\_assets/maps/emerald-2.png}
+  \includegraphics[width=0.3\paperwidth]{\maps/emerald-2.png}
   \captionof{figure}{2-PLAYER SCENARIO}
   \vspace{3em}
-  \includegraphics[width=0.3\paperwidth]{\_assets/maps/emerald-3.png}
+  \includegraphics[width=0.3\paperwidth]{\maps/emerald-3.png}
   \captionof{figure}{3-PLAYER SCENARIO}
   \vspace{3em}
-  \includegraphics[width=0.3\paperwidth]{\_assets/maps/emerald-4.png}
+  \includegraphics[width=0.3\paperwidth]{\maps/emerald-4.png}
   \captionof{figure}{4-PLAYER SCENARIO}
 \end{center}
 
