--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -151,7 +151,7 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
 
 \begin{tikzpicture}[overlay]
   \centering
-  \node at (14, 3) {\includegraphics[width=0.4\paperwidth]{\_assets/maps/sentinels.png}};
+  \node at (14, 3) {\includegraphics[width=0.4\paperwidth]{\maps/sentinels.png}};
 \end{tikzpicture}
 
 \vspace*{\fill}
