--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -131,8 +131,8 @@ During this scenario:
 
 \begin{tikzpicture}[overlay]
   \centering
-  \node at (4.5, -5) {\includegraphics[scale=0.165]{\_assets/maps/bloody-grail-2p.png}};
+  \node at (4.5, -5) {\includegraphics[scale=0.165]{\maps/bloody-grail-2p.png}};
   \node at (4.5, -10) {\footnotesize{\textbf{\MakeUppercase{2-PLAYER SCENARIO}}}};
-  \node at (12.1, -14) {\includegraphics[scale=0.165]{\_assets/maps/bloody-grail-4p.png}};
+  \node at (12.1, -14) {\includegraphics[scale=0.165]{\maps/bloody-grail-4p.png}};
   \node at (12.1, -21.6) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};
 \end{tikzpicture}
