--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -194,35 +194,35 @@ There are undefeated units left in the Titans' Stronghold at the end of Round 16
 
 \begin{minipage}{0.4\paperwidth}
   \centering
-  \includegraphics[width=0.18\paperwidth]{\_assets/maps/titans-1.png}
+  \includegraphics[width=0.18\paperwidth]{\maps/titans-1.png}
   \captionof{figure}{1-PLAYER SCENARIO}
 \end{minipage}
 \begin{minipage}{0.4\paperwidth}
   \centering
-  \includegraphics[width=0.36\paperwidth]{\_assets/maps/titans-2.png}
+  \includegraphics[width=0.36\paperwidth]{\maps/titans-2.png}
   \captionof{figure}{2-PLAYER SCENARIO}
 \end{minipage}
 \vspace{1em}
 \linebreak
 \begin{minipage}{0.4\paperwidth}
   \centering
-  \includegraphics[width=0.38\paperwidth]{\_assets/maps/titans-3.png}
+  \includegraphics[width=0.38\paperwidth]{\maps/titans-3.png}
   \captionof{figure}{3-PLAYER SCENARIO}
 \end{minipage}
 \begin{minipage}{0.4\paperwidth}
   \centering
-  \includegraphics[width=0.38\paperwidth]{\_assets/maps/titans-4.png}
+  \includegraphics[width=0.38\paperwidth]{\maps/titans-4.png}
   \captionof{figure}{4-PLAYER SCENARIO}
 \end{minipage}
 \vspace{1em}
 \linebreak
 \begin{minipage}{0.4\paperwidth}
   \centering
-  \includegraphics[width=0.38\paperwidth]{\_assets/maps/titans-5.png}
+  \includegraphics[width=0.38\paperwidth]{\maps/titans-5.png}
   \captionof{figure}{5-PLAYER SCENARIO}
 \end{minipage}
 \begin{minipage}{0.4\paperwidth}
   \centering
-  \includegraphics[width=0.38\paperwidth]{\_assets/maps/titans-6.png}
+  \includegraphics[width=0.38\paperwidth]{\maps/titans-6.png}
   \captionof{figure}{6-PLAYER SCENARIO}
 \end{minipage}
