Fix po4a for fixed maps path

--- a/translations/dragoncurse_castle.tex/dragoncurse_castle.tex.pot
+++ b/translations/dragoncurse_castle.tex/dragoncurse_castle.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-07-31 22:11+0200\n"
+"POT-Creation-Date: 2024-07-31 22:28+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -263,5 +263,5 @@ msgstr ""
 msgid ""
 "[overlay]\n"
 "  \\centering\n"
-"  \\node at (8.5, -4) {\\includegraphics[width=0.7\\paperwidth]{\\_assets/maps/dragoncurse-castle.png}};"
+"  \\node at (8.5, -4) {\\includegraphics[width=0.7\\paperwidth]{\\maps/dragoncurse-castle.png}};"
 msgstr ""
