--- a/translations/emerald_island.tex/pl.po
+++ b/translations/emerald_island.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-28 15:06+0200\n"
+"POT-Creation-Date: 2024-07-31 22:28+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -20,10 +20,10 @@ msgstr ""
 #. type: multicols
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
 #: coops/emerald_island.tex:5 clash/bloody_grail.tex:5 clash/the_hunt.tex:5
-#: campaigns/inferno_devilish_plan.tex:6
+#: clash/dragoncurse_castle.tex:5 campaigns/inferno_devilish_plan.tex:6
 #: campaigns/inferno_steadwicks_fall.tex:5
 #: campaigns/inferno_deal_with_the_devil.tex:5 sections/credits.tex:10
-#: sections/recommendations.tex:95
+#: sections/recommendations.tex:96
 #, no-wrap
 msgid ""
 "{2}\n"
@@ -70,7 +70,7 @@ msgstr ""
 #. type: multicols*
 #: coops/sentinels.tex:69 coops/titans_stronghold.tex:70
 #: coops/emerald_island.tex:60 clash/bloody_grail.tex:66 clash/the_hunt.tex:67
-#: campaigns/inferno_devilish_plan.tex:115
+#: clash/dragoncurse_castle.tex:59 campaigns/inferno_devilish_plan.tex:115
 #: campaigns/inferno_steadwicks_fall.tex:135
 #: campaigns/inferno_deal_with_the_devil.tex:124
 #, no-wrap
@@ -125,6 +125,7 @@ msgstr ""
 #. type: multicols*
 #: coops/titans_stronghold.tex:41 coops/emerald_island.tex:38
 #: clash/bloody_grail.tex:35 clash/the_hunt.tex:37
+#: clash/dragoncurse_castle.tex:40
 #, no-wrap
 msgid ""
 "\\textbf{Additional Bonus:} None\n"
@@ -225,6 +226,7 @@ msgstr ""
 
 #. type: multicols*
 #: coops/emerald_island.tex:34 clash/bloody_grail.tex:31
+#: clash/dragoncurse_castle.tex:36
 #, no-wrap
 msgid ""
 "\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling\n"
@@ -366,31 +368,31 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\begin{center}\n"
-"  \\includegraphics[width=0.2\\paperwidth]{\\_assets/maps/emerald-1.png}\n"
+"  \\includegraphics[width=0.2\\paperwidth]{\\maps/emerald-1.png}\n"
 "  \\captionof{figure}{1-PLAYER SCENARIO}\n"
 "  \\vspace{3em}\n"
-"  \\includegraphics[width=0.3\\paperwidth]{\\_assets/maps/emerald-2.png}\n"
+"  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-2.png}\n"
 "  \\captionof{figure}{2-PLAYER SCENARIO}\n"
 "  \\vspace{3em}\n"
-"  \\includegraphics[width=0.3\\paperwidth]{\\_assets/maps/emerald-3.png}\n"
+"  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-3.png}\n"
 "  \\captionof{figure}{3-PLAYER SCENARIO}\n"
 "  \\vspace{3em}\n"
-"  \\includegraphics[width=0.3\\paperwidth]{\\_assets/maps/emerald-4.png}\n"
+"  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-4.png}\n"
 "  \\captionof{figure}{4-PLAYER SCENARIO}\n"
 "\\end{center}\n"
 "\n"
 msgstr ""
 "\\begin{center}\n"
-"  \\includegraphics[width=0.2\\paperwidth]{\\_assets/maps/emerald-1.png}\n"
+"  \\includegraphics[width=0.2\\paperwidth]{\\maps/emerald-1.png}\n"
 "  \\captionof{figure}{SCENARIUSZ JEDNOOSOBOWY}\n"
 "  \\vspace{3em}\n"
-"  \\includegraphics[width=0.3\\paperwidth]{\\_assets/maps/emerald-2.png}\n"
+"  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-2.png}\n"
 "  \\captionof{figure}{SCENARIUSZ DWUOSOBOWY}\n"
 "  \\vspace{3em}\n"
-"  \\includegraphics[width=0.3\\paperwidth]{\\_assets/maps/emerald-3.png}\n"
+"  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-3.png}\n"
 "  \\captionof{figure}{SCENARIUSZ TRZYOSOBOWY}\n"
 "  \\vspace{3em}\n"
-"  \\includegraphics[width=0.3\\paperwidth]{\\_assets/maps/emerald-4.png}\n"
+"  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-4.png}\n"
 "  \\captionof{figure}{SCENARIUSZ CZTEROOSOBOWY}\n"
 "\\end{center}\n"
 "\n"
