--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -22,11 +22,9 @@ This scenario plays out over 16 rounds.
 
 \textbf{Faction Hero:} Choose any
 
-\textbf{Starting Resources:}\par
-\resources{15}{1}{1}
+\textbf{Starting Resources:} 15 \svg{gold}, 1 \svg{building_materials}, 1 \svg{valuables}
 
-\textbf{Starting Income:}\par
-\resources{10}{2}{0}
+\textbf{Starting Income:} 10 \svg{gold}, 2 \svg{building_materials}, 0 \svg{valuables}
 
 \textbf{Starting Units:}
 
