--- a/clash/dragoncurse_castle.tex
+++ b/clash/dragoncurse_castle.tex
@@ -21,11 +21,9 @@ This scenario is played over a maximum of 11 rounds.
 
 \textbf{Player Count:} 2
 
-\textbf{Starting Resources:}\par
-\resources{20}{4}{2}
+\textbf{Starting Resources:} 20 \svg{gold}, 4 \svg{building_materials}, 2 \svg{valuables}
 
-\textbf{Starting Income:}\par
-\resources{15}{2}{1}
+\textbf{Starting Income:} 15 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Units:}
 \begin{itemize}
