--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -17,11 +17,9 @@ This scenario is played over 14 rounds.
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 or 3
 
-\textbf{Starting Resources:}\par
-\resources{15}{4}{2}
+\textbf{Starting Resources:} 15 \svg{gold}, 4 \svg{building_materials}, 2 \svg{valuables}
 
-\textbf{Starting Income:}\par
-\resources{10}{2}{1}
+\textbf{Starting Income:} 10 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Units:}
 \begin{itemize}
