--- a/coops/emerald_island.tex
+++ b/coops/emerald_island.tex
@@ -18,11 +18,9 @@ This scenario is played over 8 rounds.
 
 \textbf{Player Count:} 1 -- 4
 
-\textbf{Starting Resources:}\par
-\resources{5}{2}{1}
+\textbf{Starting Resources:} 5 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
-\textbf{Starting Income:}\par
-\resources{10}{0}{1}
+\textbf{Starting Income:} 10 \svg{gold}, 1 \svg{valuables}
 
 \textbf{Starting Units:}
 \begin{itemize}
