--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -21,11 +21,9 @@ This scenario is played over 16 rounds (15 on Impossible difficulty).
 
 \textbf{Player Count:} 1 -- 6
 
-\textbf{Starting Resources:}\par
-\resources{30}{8}{2}
+\textbf{Starting Resources:} 30 \svg{gold}, 8 \svg{building_materials}, 2 \svg{valuables}
 
-\textbf{Starting Income:}\par
-\resources{10}{2}{1}
+\textbf{Starting Income:} 10 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Units:}
 \begin{itemize}
