--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -15,11 +15,9 @@ This scenario is played over 13 rounds.
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 or 4
 
-\textbf{Starting Resources:}\par
-\resources{13}{2}{1}
+\textbf{Starting Resources:} 13 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
-\textbf{Starting Income:}\par
-\resources{10}{0}{0}
+\textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
 \textbf{Starting Units:}
 \begin{itemize}
