--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -20,11 +20,9 @@ This scenario is played over 12 rounds.
 
 \textbf{Player Count:} 2
 
-\textbf{Starting Resources:}\par
-\resources{10}{2}{1}
+\textbf{Starting Resources:} 10 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
-\textbf{Starting Income:}\par
-\resources{10}{2}{1}
+\textbf{Starting Income:} 10 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Units:}
 \begin{itemize}
