--- a/templates/default.tex
+++ b/templates/default.tex
@@ -17,11 +17,9 @@ This scenario is played over ... rounds.
 
 \textbf{Player Count:} ...
 
-\textbf{Starting Resources:}\par
-\resources{<gold>}{<building_materials>}{<valuables>}
+\textbf{Starting Resources:} X \svg{gold}, Y \svg{building_materials}, Z \svg{valuables}
 
-\textbf{Starting Income:}\par
-\resources{<gold>}{<building_materials>}{<valuables>}
+\textbf{Starting Income:} A \svg{gold}, B \svg{building_materials}, C \svg{valuables}
 
 \textbf{Starting Units:}
 \begin{itemize}
