--- a/coops/emerald_island.tex
+++ b/coops/emerald_island.tex
@@ -20,7 +20,7 @@ This scenario is played over 8 rounds.
 
 \textbf{Starting Resources:} 5 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
-\textbf{Starting Income:} 10 \svg{gold}, 1 \svg{valuables}
+\textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Units:}
 \begin{itemize}
