Add new scenario: Dragoncurse Castle (#79)

--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -22,11 +22,9 @@ This scenario plays out over 16 rounds.
 
 \textbf{Faction Hero:} Choose any
 
-\textbf{Starting Resources:}\par
-\resources{15}{1}{1}
+\textbf{Starting Resources:} 15 \svg{gold}, 1 \svg{building_materials}, 1 \svg{valuables}
 
-\textbf{Starting Income:}\par
-\resources{10}{2}{0}
+\textbf{Starting Income:} 10 \svg{gold}, 2 \svg{building_materials}, 0 \svg{valuables}
 
 \textbf{Starting Units:}
 
@@ -225,7 +223,7 @@ During this ``Inferno'' campaign scenario, the following rules apply:
     \includegraphics[width=0.85\paperwidth, keepaspectratio]{\art/fire_shield.png}
   };
   \node(map)[anchor=center] at (current page.center) {
-    \includegraphics[width=\textwidth]{\_assets/maps/inferno_steadwicks_fall.png}
+    \includegraphics[width=\textwidth]{\maps/inferno_steadwicks_fall.png}
   };
 
   \node at (3, -11.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N3}}}}};
