--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -17,11 +17,9 @@ This scenario is played over 14 rounds.
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 or 3
 
-\textbf{Starting Resources:}\par
-\resources{15}{4}{2}
+\textbf{Starting Resources:} 15 \svg{gold}, 4 \svg{building_materials}, 2 \svg{valuables}
 
-\textbf{Starting Income:}\par
-\resources{10}{2}{1}
+\textbf{Starting Income:} 10 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Units:}
 \begin{itemize}
@@ -95,9 +93,9 @@ During this scenario:
 
 \begin{tikzpicture}[overlay]
   \centering
-  \node at (14, 9) {\includegraphics[scale=0.187]{\_assets/maps/the-hunt-2.png}};
+  \node at (14, 9) {\includegraphics[scale=0.187]{\maps/the-hunt-2.png}};
   \node at (14, 3) {\footnotesize{\textbf{\MakeUppercase{2-PLAYER SCENARIO}}}};
-  \node at (11, -4.5) {\includegraphics[scale=0.187]{\_assets/maps/the-hunt-3.png}};
+  \node at (11, -4.5) {\includegraphics[scale=0.187]{\maps/the-hunt-3.png}};
   \node at (4, -3.5) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
 \end{tikzpicture}
 
