--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -26,11 +26,9 @@ This scenario plays out over 14 rounds.
 
 \textbf{Faction Hero:} Choose any
 
-\textbf{Starting Resources:}\par
-\resources{15}{3}{1}
+\textbf{Starting Resources:} 15 \svg{gold}, 3 \svg{building_materials}, 1 \svg{valuables}
 
-\textbf{Starting Income:}\par
-\resources{10}{0}{0}
+\textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
 \textbf{Starting Units:}
 
@@ -212,7 +210,7 @@ During this ``Inferno'' campaign scenario, the following rules apply:
     \includegraphics[width=0.85\paperwidth, keepaspectratio]{\art/inferno.png}
   };
   \node(map)[anchor=center] at (current page.center) {
-    \includegraphics[width=\textwidth]{\_assets/maps/inferno_deal_with_the_devil.png}
+    \includegraphics[width=\textwidth]{\maps/inferno_deal_with_the_devil.png}
   };
 
 
