--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -24,11 +24,9 @@ This scenario plays out over 13 rounds.
 
 \textbf{Faction Hero:} Choose any
 
-\textbf{Starting Resources:}\par
-\resources{15}{3}{1}
+\textbf{Starting Resources:} 15 \svg{gold}, 3 \svg{building_materials}, 1 \svg{valuables}
 
-\textbf{Starting Income:}\par
-\resources{10}{0}{0}
+\textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
 \textbf{Starting Units:}
 
@@ -171,7 +169,7 @@ During this ``Inferno'' campaign scenario, the following rules apply:
     \includegraphics[width=0.85\paperwidth, keepaspectratio]{\art/fire_magic.png}
   };
   \node(map)[anchor=center] at (current page.center) {
-    \includegraphics[width=\textwidth]{\_assets/maps/inferno_devilish_plan.png}
+    \includegraphics[width=\textwidth]{\maps/inferno_devilish_plan.png}
   };
   \node at (2,-6.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N8}}}}};
   \node at (13, -6.5) {\large{{\textbf{\textcolor{darkcandyapplered}{N7}}}}};
