--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -15,11 +15,9 @@ This scenario is played over 13 rounds.
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 or 4
 
-\textbf{Starting Resources:}\par
-\resources{13}{2}{1}
+\textbf{Starting Resources:} 13 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
-\textbf{Starting Income:}\par
-\resources{10}{0}{0}
+\textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
 \textbf{Starting Units:}
 \begin{itemize}
@@ -131,8 +129,8 @@ During this scenario:
 
 \begin{tikzpicture}[overlay]
   \centering
-  \node at (4.5, -5) {\includegraphics[scale=0.165]{\_assets/maps/bloody-grail-2p.png}};
+  \node at (4.5, -5) {\includegraphics[scale=0.165]{\maps/bloody-grail-2p.png}};
   \node at (4.5, -10) {\footnotesize{\textbf{\MakeUppercase{2-PLAYER SCENARIO}}}};
-  \node at (12.1, -14) {\includegraphics[scale=0.165]{\_assets/maps/bloody-grail-4p.png}};
+  \node at (12.1, -14) {\includegraphics[scale=0.165]{\maps/bloody-grail-4p.png}};
   \node at (12.1, -21.6) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};
 \end{tikzpicture}
