--- a/clash/dragoncurse_castle.tex
+++ b/clash/dragoncurse_castle.tex
@@ -9,8 +9,8 @@
 
 \textit{The majestic castle on the hill overlooks this rich province, and the local ruler is temporarily missing, leaving only his army to defend the castle walls.
 Both neighboring rulers suddenly decide that these lands are theirs by right and must be secured before the local ruler returns.
-But legend speaks of a wild dragon bound to this land.
-Will you dismiss the curse as a distraction, or can the dragon be tamed to give you the necessary edge over your opponent?
+However, legend speaks of a wild dragon bound to this land.
+Will you dismiss the curse as a mere distraction, or can the dragon be tamed to give you the necessary edge over your opponent?
 }
 
 \subsection*{\MakeUppercase{Scenario Length}}
@@ -46,7 +46,7 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-When the Random Town is captured for the first time, players continue playing the current round and will play \textbf{one additional final round}.
+When the Random Town is captured for the first time, players continue playing the current round and then play \textbf{one additional final round}.
 The player controlling the Random Town at the end of that final round is the winner.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
