--- a/clash/dragoncurse_castle.tex
+++ b/clash/dragoncurse_castle.tex
@@ -50,8 +50,8 @@ When the Random Town is captured for the first time, players continue playing th
 The player controlling the Random Town at the end of that final round is the winner.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
-At the end of the \nth{10} round, if no player controls the Random Town, both players lose the game (\textit{the local ruler returns to the castle and regains control of the province});
-otherwise, if the Random Town was first captured in the \nth{10} round, the game proceeds, as normal, to its additional final round (in this case, the \nth{11} round).
+At the end of the \nth{10} round, if no player controls the Random Town, both players lose the game (\textit{the local ruler returns to the castle and regains control of the province}).
+However, if the Random Town is first captured in the \nth{10} round, the game proceeds as normal to its additional final round (in this case, the \nth{11} round).
 
 \subsection*{\MakeUppercase{Timed Events}}
 
@@ -67,15 +67,15 @@ otherwise, if the Random Town was first captured in the \nth{10} round, the game
 \subsection*{\MakeUppercase{Additional Rules}}
 During this scenario:
 \begin{itemize}
-  \item Whenever an Obelisk is visited for the first time, the visiting player gains 2 \svg{building_materials}
-  \item The Random Town is also defended by Walls and Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.
-  \item Like any other Town, when the Random Town is owned by a player, it is a valid location for that player to:
+  \item Whenever an Obelisk is visited for the first time, the visiting player gains 2 \svg{building_materials}.
+  \item The Random Town is defended by Walls and a Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.
+  \item Like any other town, when the Random Town is owned by a player, it is a valid location for that player to:
     \begin{itemize}
       \item Place a newly recruited Secondary Hero.
       \item Place the Main Hero when defeated.
-      \item Temporarily transport the army to, for 8 \svg{gold} (when the Random Town is attacked).
+      \item Temporarily transport the army to, for 8 \svg{gold}, when the Random Town is attacked.
     \end{itemize}
-  \item The first player to visit the Dragon Utopia (after defeating the defending Azure unit(s)) draws cards from the Neutral Units \svgunit{azure} deck until a Dragon that is not associated with any faction is drawn.
+  \item The first player to visit the Dragon Utopia (after defeating the defending Azure unit(s)) draws cards from the Neutral Units \svgunit{azure} deck until a Dragon not associated with any faction is drawn.
     The player may immediately recruit that Dragon for free.
 \end{itemize}
 
