--- a/clash/dragoncurse_castle.tex
+++ b/clash/dragoncurse_castle.tex
@@ -67,9 +67,9 @@ However, if the Random Town is first captured in the \nth{10} round, the game pr
 \subsection*{\MakeUppercase{Additional Rules}}
 During this scenario:
 \begin{itemize}
-  \item Whenever an Obelisk is visited for the first time, the visiting player gains 2 \svg{building_materials}.
+  \item Whenever an Obelisk is visited for the first time, the visiting player gains 2 \svg{building_materials}
   \item The Random Town is defended by Walls and a Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.
-  \item Like any other town, when the Random Town is owned by a player, it is a valid location for that player to:
+  \item Like any other Town, when the Random Town is owned by a player, it is a valid location for that player to:
     \begin{itemize}
       \item Place a newly recruited Secondary Hero.
       \item Place the Main Hero when defeated.
