--- a/translations/dragoncurse_castle.tex/dragoncurse_castle.tex.pot
+++ b/translations/dragoncurse_castle.tex/dragoncurse_castle.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-08-01 08:03+0200\n"
+"POT-Creation-Date: 2024-08-01 19:41+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -132,8 +132,8 @@ msgstr ""
 msgid ""
 "\\textit{The majestic castle on the hill overlooks this rich province, and the local ruler is temporarily missing, leaving only his army to defend the castle walls.\n"
 "Both neighboring rulers suddenly decide that these lands are theirs by right and must be secured before the local ruler returns.\n"
-"But legend speaks of a wild dragon bound to this land.\n"
-"Will you dismiss the curse as a distraction, or can the dragon be tamed to give you the necessary edge over your opponent?\n"
+"However, legend speaks of a wild dragon bound to this land.\n"
+"Will you dismiss the curse as a mere distraction, or can the dragon be tamed to give you the necessary edge over your opponent?\n"
 "}\n"
 "\n"
 msgstr ""
@@ -193,7 +193,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
-"When the Random Town is captured for the first time, players continue playing the current round and will play \\textbf{one additional final round}.\n"
+"When the Random Town is captured for the first time, players continue playing the current round and then play \\textbf{one additional final round}.\n"
 "The player controlling the Random Town at the end of that final round is the winner.\n"
 "\n"
 msgstr ""
@@ -203,8 +203,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
-"At the end of the \\nth{10} round, if no player controls the Random Town, both players lose the game (\\textit{the local ruler returns to the castle and regains control of the province});\n"
-"otherwise, if the Random Town was first captured in the \\nth{10} round, the game proceeds, as normal, to its additional final round (in this case, the \\nth{11} round).\n"
+"At the end of the \\nth{10} round, if no player controls the Random Town, both players lose the game (\\textit{the local ruler returns to the castle and regains control of the province}).\n"
+"However, if the Random Town is first captured in the \\nth{10} round, the game proceeds as normal to its additional final round (in this case, the \\nth{11} round).\n"
 "\n"
 msgstr ""
 
@@ -229,14 +229,14 @@ msgid ""
 "During this scenario:\n"
 "\\begin{itemize}\n"
 "  \\item Whenever an Obelisk is visited for the first time, the visiting player gains 2 \\svg{building_materials}\n"
-"  \\item The Random Town is also defended by Walls and Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.\n"
+"  \\item The Random Town is defended by Walls and a Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.\n"
 "  \\item Like any other Town, when the Random Town is owned by a player, it is a valid location for that player to:\n"
 "    \\begin{itemize}\n"
 "      \\item Place a newly recruited Secondary Hero.\n"
 "      \\item Place the Main Hero when defeated.\n"
-"      \\item Temporarily transport the army to, for 8 \\svg{gold} (when the Random Town is attacked).\n"
+"      \\item Temporarily transport the army to, for 8 \\svg{gold}, when the Random Town is attacked.\n"
 "    \\end{itemize}\n"
-"  \\item The first player to visit the Dragon Utopia (after defeating the defending Azure unit(s)) draws cards from the Neutral Units \\svgunit{azure} deck until a Dragon that is not associated with any faction is drawn.\n"
+"  \\item The first player to visit the Dragon Utopia (after defeating the defending Azure unit(s)) draws cards from the Neutral Units \\svgunit{azure} deck until a Dragon not associated with any faction is drawn.\n"
 "    The player may immediately recruit that Dragon for free.\n"
 "\\end{itemize}\n"
 "\n"
