--- a/translations/dragoncurse_castle.tex/pl.po
+++ b/translations/dragoncurse_castle.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-01 08:03+0200\n"
+"POT-Creation-Date: 2024-08-01 19:41+0200\n"
 "PO-Revision-Date: 2024-07-31 22:11+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -120,38 +120,31 @@ msgstr ""
 #.  !TeX spellcheck = en_US
 #. type: Plain text
 #: clash/dragoncurse_castle.tex:3
-#, fuzzy
-#| msgid ""
-#| "\\addscenariosection{1}{Clash Scenario}{The Hunt}{\\images/slayer.png}"
 msgid ""
 "\\addscenariosection{1}{Clash Scenario}{Dragoncurse Castle}{\\images/frenzy."
 "png}"
-msgstr "\\addscenariosection{1}{Tryb Starcia}{Polowanie}{\\images/slayer.png}"
+msgstr ""
+"\\addscenariosection{1}{Tryb Starcia}{Zamek Smoczej Klątwy}{\\images/frenzy."
+"png}"
 
 #. type: multicols*
 #: clash/dragoncurse_castle.tex:7
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Author:} Tm335\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Author:} profmamadu\n"
 "\n"
 msgstr ""
-"\\textbf{Autor:} Tm335\n"
+"\\textbf{Autor:} profmamadu\n"
 "\n"
 
 #. type: multicols*
 #: clash/dragoncurse_castle.tex:9
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Source:} \\href{https://discord.com/channels/740870068178649108/1219333721019256943}{Archon Studio Discord}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Source:} \\href{https://discord.com/channels/740870068178649108/1253016693517717714/1253016693517717714}{Archon Studios Discord}\n"
 "\n"
 msgstr ""
-"\\textbf{Źródło:} \\href{https://discord.com/channels/740870068178649108/1219333721019256943}{Discord Archon Studio}\n"
+"\\textbf{Źródło:} \\href{https://discord.com/channels/740870068178649108/1253016693517717714/1253016693517717714}{Discord Archon Studio}\n"
 "\n"
 
 #. type: multicols*
@@ -160,23 +153,26 @@ msgstr ""
 msgid ""
 "\\textit{The majestic castle on the hill overlooks this rich province, and the local ruler is temporarily missing, leaving only his army to defend the castle walls.\n"
 "Both neighboring rulers suddenly decide that these lands are theirs by right and must be secured before the local ruler returns.\n"
-"But legend speaks of a wild dragon bound to this land.\n"
-"Will you dismiss the curse as a distraction, or can the dragon be tamed to give you the necessary edge over your opponent?\n"
+"However, legend speaks of a wild dragon bound to this land.\n"
+"Will you dismiss the curse as a mere distraction, or can the dragon be tamed to give you the necessary edge over your opponent?\n"
 "}\n"
 "\n"
 msgstr ""
+"\\textit{Majestatyczny zamek na wzgórzu góruje nad tą bogatą prowincją, a lokalny władca wyjechał, zostawiwszy tylko swoją armię do obrony zamkowych murów.\n"
+"Obaj sąsiedni władcy nagle decydują, że te ziemie prawnie należą się im i muszą zostać zabezpieczone, zanim lokalny władca powróci.\n"
+"Jednak legenda mówi o dzikim smoku związanym z tą ziemią.\n"
+"Czy zlekceważysz klątwę jako zwykły przesąd, czy też zdołasz oswoić smoka, aby uzyskać przewagę nad przeciwnikiem?\n"
+"}\n"
+"\n"
 
 #. type: multicols*
 #: clash/dragoncurse_castle.tex:19
-#, fuzzy, no-wrap
-#| msgid ""
-#| "This scenario is played over 12 rounds.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "This scenario is played over a maximum of 11 rounds.\n"
 "\n"
 msgstr ""
-"Ten scenariusz jest rozgrywany w 12 rundach.\n"
+"Ten scenariusz jest rozgrywany maksymalnie w 11 rundach.\n"
 "\n"
 
 #. type: multicols*
@@ -186,6 +182,8 @@ msgid ""
 "\\textbf{Starting Resources:} 20 \\svg{gold}, 4 \\svg{building_materials}, 2 \\svg{valuables}\n"
 "\n"
 msgstr ""
+"\\textbf{Zasoby Startowe:} 20 \\svg{gold}, 4 \\svg{building_materials}, 2 \\svg{valuables}\n"
+"\n"
 
 #. type: multicols*
 #: clash/dragoncurse_castle.tex:27
@@ -194,17 +192,12 @@ msgid ""
 "\\textbf{Starting Income:} 15 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
+"\\textbf{Początkowy Przychód:} 15 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\n"
 
 #. type: multicols*
 #: clash/dragoncurse_castle.tex:32
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Starting Units:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item A Pack of \\svgunit{bronze} units of your choice\n"
-#| "  \\item A Few \\svgunit{bronze} units of your choice\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
@@ -214,23 +207,13 @@ msgid ""
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item Grupa \\svgunit{bronze} jednostek do wyboru\n"
-"  \\item Garstka \\svgunit{bronze} jednostek do wyboru\n"
+"  \\item 2 × Grupa \\svgunit{bronze} Jednosek o najniższym koszcie rekrutacji\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: clash/dragoncurse_castle.tex:47
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{For a 2-player scenario:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item 2 × Starting (I) Map tile\n"
-#| "  \\item 2 × Far (II--III) Map tile\n"
-#| "  \\item 2 × Near (IV--V) Map tile\n"
-#| "  \\item 1 × Center (VI--VII) Map tile; place a Black cube or a miniature representing the Dragon in the center of the tile\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "Take the following Map tiles and arrange them as shown in the scenario map layout:\n"
@@ -242,12 +225,13 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Dla scenariusza dwuosobowego:}\n"
+"\\subsection*{\\MakeUppercase{Przygotowanie Mapy}}\n"
+"Weź następujące Kafelki Mapy i ułóż je zgodnie z układem mapy scenariusza:\n"
 "\\begin{itemize}\n"
 "  \\item 2 × Początkowy (I) Kafelek Mapy\n"
-"  \\item 2 × Daleki (II--III) Kafelek Mapy\n"
-"  \\item 2 × Bliski (IV--V) Kafelek Mapy\n"
-"  \\item 1 × Centralny (VI--VII) Kafelek Mapy; umieść Czarną Kostkę lub figurkę reprezentującą Smoka w centrum Kafelka\n"
+"  \\item 2 × Daleki (II-III) Kafelek Mapy\n"
+"  \\item 5 × Bliski (IV-V) Kafelek Mapy\n"
+"  \\item 2 × Centralny (VI-VII) Kafelek Mapy, wybierając losowo jeden z Losowym Miastem, a drugi ze Smoczą Utopią.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -256,30 +240,32 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
-"When the Random Town is captured for the first time, players continue playing the current round and will play \\textbf{one additional final round}.\n"
+"When the Random Town is captured for the first time, players continue playing the current round and then play \\textbf{one additional final round}.\n"
 "The player controlling the Random Town at the end of that final round is the winner.\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Warunki Zwycięstwa}}\n"
+"Gdy Losowe Miasto zostanie zdobyte po raz pierwszy, gracze kontynuują grę w bieżącej rundzie, a następnie rozgrywają \\textbf{jedną dodatkową rundę końcową}.\n"
+"Gracz kontrolujący Losowe Miasto na koniec tej rundy końcowej zostaje zwycięzcą.\n"
+"\n"
 
 #. type: multicols*
 #: clash/dragoncurse_castle.tex:55
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
-"At the end of the \\nth{10} round, if no player controls the Random Town, both players lose the game (\\textit{the local ruler returns to the castle and regains control of the province});\n"
-"otherwise, if the Random Town was first captured in the \\nth{10} round, the game proceeds, as normal, to its additional final round (in this case, the \\nth{11} round).\n"
+"At the end of the \\nth{10} round, if no player controls the Random Town, both players lose the game (\\textit{the local ruler returns to the castle and regains control of the province}).\n"
+"However, if the Random Town is first captured in the \\nth{10} round, the game proceeds as normal to its additional final round (in this case, the \\nth{11} round).\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Warunki Przegranej}}\n"
+"Na koniec 10. rundy, jeśli żaden gracz nie kontroluje Losowego Miasta, obaj gracze przegrywają grę (\\textit{lokalny władca wraca do zamku i odzyskuje kontrolę nad prowincją}).\n"
+"Jednakże, jeśli Losowe Miasto zostanie zdobyte po raz pierwszy w 10. rundzie, gra toczy się normalnie do końca dodatkowej rundy (w tym przypadku 11.).\n"
+"\n"
 
 #. type: multicols*
 #: clash/dragoncurse_castle.tex:63
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{4}, \\nth{8} and \\nth{12} Rounds:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Remove all Black cubes from all the Water Wheels, Windmills and Mystical Gardens on the map.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "  \\textbf{\\nth{4} and \\nth{8} Round:}\n"
 "\\begin{itemize}\n"
@@ -288,9 +274,10 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Rundy 4., 8. i 12.:}\n"
+"  \\textbf{4. i 8. Runda:}\n"
 "\\begin{itemize}\n"
-"  \\item Usuń wszystkie Czarne Kostki z każdego Wiatraka, Młyna Wodnego i Mistycznego Ogrodu na mapie.\n"
+"  \\item Usuń wszystkie czarne kostki z Młynów Wodnych i Wiatraków na mapie.\n"
+"  \\item Wszyscy Bohaterowie zyskują +1 \\svg{movement}\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -303,18 +290,34 @@ msgid ""
 "During this scenario:\n"
 "\\begin{itemize}\n"
 "  \\item Whenever an Obelisk is visited for the first time, the visiting player gains 2 \\svg{building_materials}\n"
-"  \\item The Random Town is also defended by Walls and Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.\n"
+"  \\item The Random Town is defended by Walls and a Gate when owned by a player, but it only has an Arrow Tower if that player already has a Citadel.\n"
 "  \\item Like any other Town, when the Random Town is owned by a player, it is a valid location for that player to:\n"
 "    \\begin{itemize}\n"
 "      \\item Place a newly recruited Secondary Hero.\n"
 "      \\item Place the Main Hero when defeated.\n"
-"      \\item Temporarily transport the army to, for 8 \\svg{gold} (when the Random Town is attacked).\n"
+"      \\item Temporarily transport the army to, for 8 \\svg{gold}, when the Random Town is attacked.\n"
 "    \\end{itemize}\n"
-"  \\item The first player to visit the Dragon Utopia (after defeating the defending Azure unit(s)) draws cards from the Neutral Units \\svgunit{azure} deck until a Dragon that is not associated with any faction is drawn.\n"
+"  \\item The first player to visit the Dragon Utopia (after defeating the defending Azure unit(s)) draws cards from the Neutral Units \\svgunit{azure} deck until a Dragon not associated with any faction is drawn.\n"
 "    The player may immediately recruit that Dragon for free.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"{2}\n"
+"\\subsection*{\\MakeUppercase{Dodatkowe Zasady}}\n"
+"Podczas tego scenariusza:\n"
+"\\begin{itemize}\n"
+"  \\item Za każdym razem, gdy Obelisk jest odwiedzany po raz pierwszy, odwiedzający gracz zdobywa 2 \\svg{building_materials}\n"
+"  \\item Losowe Miasto jest bronione przez Mury i Bramę, gdy jest w posiadaniu gracza, ale ma tylko Wieżę Łuczników, jeśli ten gracz ma już Cytadelę.\n"
+"  \\item Jak każde inne Miasto, gdy Losowe Miasto jest w posiadaniu gracza, umożliwia ono:\n"
+"    \\begin{itemize}\n"
+"      \\item Umieścić nowo zrekrutowanego Bohatera Pomocniczego.\n"
+"      \\item Umieścić Bohatera Głównego, gdy został pokonany.\n"
+"      \\item Tymczasowo przetransportować armię za 8 \\svg{gold}, gdy Losowe Miasto jest atakowane.\n"
+"    \\end{itemize}\n"
+"  \\item Pierwszy gracz, który odwiedzi Smoczą Utopię (po pokonaniu broniących jednostek Błękitnych), ciągnie karty z talii Neutralnych \\svgunit{azure} Jednostek do momentu, aż wylosuje Smoka niepowiązanego z żadną frakcją.\n"
+"    Gracz może natychmiastowo zrekrutować tego Smoka za darmo.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols
 #: clash/dragoncurse_castle.tex:91
@@ -331,16 +334,9 @@ msgstr ""
 
 #. type: tikzpicture
 #: clash/dragoncurse_castle.tex:97
-#, fuzzy, no-wrap
-#| msgid ""
-#| "[overlay]\n"
-#| "  \\centering\n"
-#| "  \\node at (14, 3) {\\includegraphics[width=0.4\\paperwidth]{\\_assets/maps/sentinels.png}};"
+#, no-wrap
 msgid ""
 "[overlay]\n"
 "  \\centering\n"
 "  \\node at (8.5, -4) {\\includegraphics[width=0.7\\paperwidth]{\\maps/dragoncurse-castle.png}};"
 msgstr ""
-"[overlay]\n"
-"  \\centering\n"
-"  \\node at (14, 6) {\\includegraphics[width=0.4\\paperwidth]{\\_assets/maps/sentinels.png}};"
