--- a/translations/dragoncurse_castle.tex/pl.po
+++ b/translations/dragoncurse_castle.tex/pl.po
@@ -340,3 +340,6 @@ msgid ""
 "  \\centering\n"
 "  \\node at (8.5, -4) {\\includegraphics[width=0.7\\paperwidth]{\\maps/dragoncurse-castle.png}};"
 msgstr ""
+"[overlay]\n"
+"  \\centering\n"
+"  \\node at (8.5, -3) {\\includegraphics[width=0.7\\paperwidth]{\\maps/dragoncurse-castle.png}};"
